--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,12 @@
   flex-direction: row;
   justify-content: space-evenly;
 }
+
+.word-input {
+  display: block;
+}
+
+.word-input input {
+  width: 20px;
+  height: 20px;
+}
